de-210k-ify a bit more

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "210K VRC AutonPP",
+    "name": "3300D VRC AutonPP",
     "short_name": "Path Planner",
     "description": "Autonomous path planning tool for VEX robotics",
     "icons": [
